@@ -21,9 +21,10 @@ package org.apache.commons.lang3.mutable;
  * 
  * @see Short
  * @since 2.1
- * @version $Id: MutableShort.java 1096472 2011-04-25 13:28:06Z mbenson $
+ * @author Apache Software Foundation
+ * @version $Id: MutableShort.java 1067685 2011-02-06 15:38:57Z niallp $
  */
-public class MutableShort extends Number implements Comparable<MutableShort>, Mutable<Number> {
+public class MutableShort extends Number implements Comparable, Mutable {
 
     /**
      * Required for serialization support.
@@ -81,7 +82,7 @@ public class MutableShort extends Number implements Comparable<MutableShort>, Mu
      * 
      * @return the value as a Short, never null
      */
-    public Short getValue() {
+    public Object getValue() {
         return new Short(this.value);
     }
 
@@ -99,9 +100,10 @@ public class MutableShort extends Number implements Comparable<MutableShort>, Mu
      * 
      * @param value  the value to set, not null
      * @throws NullPointerException if the object is null
+     * @throws ClassCastException if the type is not a {@link Number}
      */
-    public void setValue(Number value) {
-        this.value = value.shortValue();
+    public void setValue(Object value) {
+        setValue(((Number) value).shortValue());
     }
 
     //-----------------------------------------------------------------------
@@ -167,13 +169,12 @@ public class MutableShort extends Number implements Comparable<MutableShort>, Mu
     }
 
     //-----------------------------------------------------------------------
-    // byteValue relies on Number implementation
+    // bytValue relies on Number implementation
     /**
      * Returns the value of this MutableShort as a short.
      *
      * @return the numeric value represented by this object after conversion to type short.
      */
-    @Override
     public short shortValue() {
         return value;
     }
@@ -183,7 +184,6 @@ public class MutableShort extends Number implements Comparable<MutableShort>, Mu
      *
      * @return the numeric value represented by this object after conversion to type int.
      */
-    @Override
     public int intValue() {
         return value;
     }
@@ -193,7 +193,6 @@ public class MutableShort extends Number implements Comparable<MutableShort>, Mu
      *
      * @return the numeric value represented by this object after conversion to type long.
      */
-    @Override
     public long longValue() {
         return value;
     }
@@ -203,7 +202,6 @@ public class MutableShort extends Number implements Comparable<MutableShort>, Mu
      *
      * @return the numeric value represented by this object after conversion to type float.
      */
-    @Override
     public float floatValue() {
         return value;
     }
@@ -213,7 +211,6 @@ public class MutableShort extends Number implements Comparable<MutableShort>, Mu
      *
      * @return the numeric value represented by this object after conversion to type double.
      */
-    @Override
     public double doubleValue() {
         return value;
     }
@@ -225,7 +222,7 @@ public class MutableShort extends Number implements Comparable<MutableShort>, Mu
      * @return a Short instance containing the value from this mutable, never null
      */
     public Short toShort() {
-        return Short.valueOf(shortValue());
+        return new Short(shortValue());
     }
 
     //-----------------------------------------------------------------------
@@ -237,7 +234,6 @@ public class MutableShort extends Number implements Comparable<MutableShort>, Mu
      * @param obj  the object to compare with, null returns false
      * @return <code>true</code> if the objects are the same; <code>false</code> otherwise.
      */
-    @Override
     public boolean equals(Object obj) {
         if (obj instanceof MutableShort) {
             return value == ((MutableShort) obj).shortValue();
@@ -250,7 +246,6 @@ public class MutableShort extends Number implements Comparable<MutableShort>, Mu
      * 
      * @return a suitable hash code
      */
-    @Override
     public int hashCode() {
         return value;
     }
@@ -259,10 +254,12 @@ public class MutableShort extends Number implements Comparable<MutableShort>, Mu
     /**
      * Compares this mutable to another in ascending order.
      * 
-     * @param other  the other mutable to compare to, not null
+     * @param obj the other mutable to compare to, not null
      * @return negative if this is less, zero if equal, positive if greater
+     * @throws ClassCastException if the argument is not a MutableShort
      */
-    public int compareTo(MutableShort other) {
+    public int compareTo(Object obj) {
+        MutableShort other = (MutableShort) obj;
         short anotherVal = other.value;
         return value < anotherVal ? -1 : (value == anotherVal ? 0 : 1);
     }
@@ -273,7 +270,6 @@ public class MutableShort extends Number implements Comparable<MutableShort>, Mu
      * 
      * @return the mutable value as a string
      */
-    @Override
     public String toString() {
         return String.valueOf(value);
     }
