@@ -5,9 +5,9 @@
  * The ASF licenses this file to You under the Apache License, Version 2.0
  * (the "License"); you may not use this file except in compliance with
  * the License.  You may obtain a copy of the License at
- *
+ * 
  *      http://www.apache.org/licenses/LICENSE-2.0
- *
+ * 
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -15,8 +15,6 @@
  * limitations under the License.
  */
 package org.apache.commons.lang3;
-
-import static org.apache.commons.lang3.JavaVersion.JAVA_1_5;
 
 import java.lang.reflect.Constructor;
 import java.lang.reflect.Method;
@@ -29,12 +27,20 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 
+import org.apache.commons.lang3.ArrayUtils;
+import org.apache.commons.lang3.ClassUtils;
+
 import junit.framework.TestCase;
+
+
 
 /**
  * Unit tests {@link org.apache.commons.lang3.ClassUtils}.
  *
- * @version $Id: ClassUtilsTest.java 1144929 2011-07-10 18:26:16Z ggregory $
+ * @author Apache Software Foundation
+ * @author Gary D. Gregory
+ * @author Tomasz Blachowicz
+ * @version $Id: ClassUtilsTest.java 1067685 2011-02-06 15:38:57Z niallp $
  */
 public class ClassUtilsTest extends TestCase {
 
@@ -45,35 +51,29 @@ public class ClassUtilsTest extends TestCase {
     private static class Inner {
         private class DeeplyNested{}
     }
-
+    
     //-----------------------------------------------------------------------
     public void testConstructor() {
         assertNotNull(new ClassUtils());
-        Constructor<?>[] cons = ClassUtils.class.getDeclaredConstructors();
+        Constructor[] cons = ClassUtils.class.getDeclaredConstructors();
         assertEquals(1, cons.length);
         assertEquals(true, Modifier.isPublic(cons[0].getModifiers()));
         assertEquals(true, Modifier.isPublic(ClassUtils.class.getModifiers()));
         assertEquals(false, Modifier.isFinal(ClassUtils.class.getModifiers()));
     }
-
+    
     // -------------------------------------------------------------------------
     public void test_getShortClassName_Object() {
         assertEquals("ClassUtils", ClassUtils.getShortClassName(new ClassUtils(), "<null>"));
         assertEquals("ClassUtilsTest.Inner", ClassUtils.getShortClassName(new Inner(), "<null>"));
         assertEquals("String", ClassUtils.getShortClassName("hello", "<null>"));
         assertEquals("<null>", ClassUtils.getShortClassName(null, "<null>"));
-
-        // Inner types
-        class Named extends Object {};
-        assertEquals("ClassUtilsTest.1", ClassUtils.getShortClassName(new Object(){}, "<null>"));
-        assertEquals("ClassUtilsTest.1Named", ClassUtils.getShortClassName(new Named(), "<null>"));
-        assertEquals("ClassUtilsTest.Inner", ClassUtils.getShortClassName(new Inner(), "<null>"));
     }
-
+    
     public void test_getShortClassName_Class() {
         assertEquals("ClassUtils", ClassUtils.getShortClassName(ClassUtils.class));
         assertEquals("Map.Entry", ClassUtils.getShortClassName(Map.Entry.class));
-        assertEquals("", ClassUtils.getShortClassName((Class<?>) null));
+        assertEquals("", ClassUtils.getShortClassName((Class) null));
 
         // LANG-535
         assertEquals("String[]", ClassUtils.getShortClassName(String[].class));
@@ -103,68 +103,13 @@ public class ClassUtilsTest extends TestCase {
         assertEquals("String[][]", ClassUtils.getShortClassName(String[][].class));
         assertEquals("String[][][]", ClassUtils.getShortClassName(String[][][].class));
         assertEquals("String[][][][]", ClassUtils.getShortClassName(String[][][][].class));
-        
-        // Inner types
-        class Named extends Object {};
-        assertEquals("ClassUtilsTest.2", ClassUtils.getShortClassName(new Object(){}.getClass()));
-        assertEquals("ClassUtilsTest.2Named", ClassUtils.getShortClassName(Named.class));
-        assertEquals("ClassUtilsTest.Inner", ClassUtils.getShortClassName(Inner.class));
     }
-
-
-
+    
     public void test_getShortClassName_String() {
         assertEquals("ClassUtils", ClassUtils.getShortClassName(ClassUtils.class.getName()));
         assertEquals("Map.Entry", ClassUtils.getShortClassName(Map.Entry.class.getName()));
         assertEquals("", ClassUtils.getShortClassName((String) null));
         assertEquals("", ClassUtils.getShortClassName(""));
-    }
-
-    public void test_getSimpleName_Class() {
-        assertEquals("ClassUtils", ClassUtils.getSimpleName(ClassUtils.class));
-        assertEquals("Entry", ClassUtils.getSimpleName(Map.Entry.class));
-        assertEquals("", ClassUtils.getSimpleName((Class<?>) null));
-
-        // LANG-535
-        assertEquals("String[]", ClassUtils.getSimpleName(String[].class));
-        assertEquals("Entry[]", ClassUtils.getSimpleName(Map.Entry[].class));
-
-        // Primitives
-        assertEquals("boolean", ClassUtils.getSimpleName(boolean.class));
-        assertEquals("byte", ClassUtils.getSimpleName(byte.class));
-        assertEquals("char", ClassUtils.getSimpleName(char.class));
-        assertEquals("short", ClassUtils.getSimpleName(short.class));
-        assertEquals("int", ClassUtils.getSimpleName(int.class));
-        assertEquals("long", ClassUtils.getSimpleName(long.class));
-        assertEquals("float", ClassUtils.getSimpleName(float.class));
-        assertEquals("double", ClassUtils.getSimpleName(double.class));
-
-        // Primitive Arrays
-        assertEquals("boolean[]", ClassUtils.getSimpleName(boolean[].class));
-        assertEquals("byte[]", ClassUtils.getSimpleName(byte[].class));
-        assertEquals("char[]", ClassUtils.getSimpleName(char[].class));
-        assertEquals("short[]", ClassUtils.getSimpleName(short[].class));
-        assertEquals("int[]", ClassUtils.getSimpleName(int[].class));
-        assertEquals("long[]", ClassUtils.getSimpleName(long[].class));
-        assertEquals("float[]", ClassUtils.getSimpleName(float[].class));
-        assertEquals("double[]", ClassUtils.getSimpleName(double[].class));
-
-        // Arrays of arrays of ...
-        assertEquals("String[][]", ClassUtils.getSimpleName(String[][].class));
-        assertEquals("String[][][]", ClassUtils.getSimpleName(String[][][].class));
-        assertEquals("String[][][][]", ClassUtils.getSimpleName(String[][][][].class));
-        
-        // On-the-fly types
-        class Named extends Object {};
-        assertEquals("", ClassUtils.getSimpleName(new Object(){}.getClass()));
-        assertEquals("Named", ClassUtils.getSimpleName(Named.class));
-    }
-
-    public void test_getSimpleName_Object() {
-        assertEquals("ClassUtils", ClassUtils.getSimpleName(new ClassUtils(), "<null>"));
-        assertEquals("Inner", ClassUtils.getSimpleName(new Inner(), "<null>"));
-        assertEquals("String", ClassUtils.getSimpleName("hello", "<null>"));
-        assertEquals("<null>", ClassUtils.getSimpleName(null, "<null>"));
     }
 
     // -------------------------------------------------------------------------
@@ -173,11 +118,11 @@ public class ClassUtilsTest extends TestCase {
         assertEquals("org.apache.commons.lang3", ClassUtils.getPackageName(new Inner(), "<null>"));
         assertEquals("<null>", ClassUtils.getPackageName(null, "<null>"));
     }
-
+    
     public void test_getPackageName_Class() {
         assertEquals("java.lang", ClassUtils.getPackageName(String.class));
         assertEquals("java.util", ClassUtils.getPackageName(Map.Entry.class));
-        assertEquals("", ClassUtils.getPackageName((Class<?>)null));
+        assertEquals("", ClassUtils.getPackageName((Class)null));
 
         // LANG-535
         assertEquals("java.lang", ClassUtils.getPackageName(String[].class));
@@ -196,32 +141,27 @@ public class ClassUtilsTest extends TestCase {
         assertEquals("java.lang", ClassUtils.getPackageName(String[][].class));
         assertEquals("java.lang", ClassUtils.getPackageName(String[][][].class));
         assertEquals("java.lang", ClassUtils.getPackageName(String[][][][].class));
-        
-        // On-the-fly types
-        class Named extends Object {};
-        assertEquals("org.apache.commons.lang3", ClassUtils.getPackageName(new Object(){}.getClass()));
-        assertEquals("org.apache.commons.lang3", ClassUtils.getPackageName(Named.class));
     }
-
+    
     public void test_getPackageName_String() {
         assertEquals("org.apache.commons.lang3", ClassUtils.getPackageName(ClassUtils.class.getName()));
         assertEquals("java.util", ClassUtils.getPackageName(Map.Entry.class.getName()));
         assertEquals("", ClassUtils.getPackageName((String)null));
         assertEquals("", ClassUtils.getPackageName(""));
     }
-
+    
     // -------------------------------------------------------------------------
     public void test_getAllSuperclasses_Class() {
-        List<?> list = ClassUtils.getAllSuperclasses(CY.class);
+        List list = ClassUtils.getAllSuperclasses(CY.class);
         assertEquals(2, list.size());
         assertEquals(CX.class, list.get(0));
         assertEquals(Object.class, list.get(1));
-
+        
         assertEquals(null, ClassUtils.getAllSuperclasses(null));
     }
-
+    
     public void test_getAllInterfaces_Class() {
-        List<?> list = ClassUtils.getAllInterfaces(CY.class);
+        List list = ClassUtils.getAllInterfaces(CY.class);
         assertEquals(6, list.size());
         assertEquals(IB.class, list.get(0));
         assertEquals(IC.class, list.get(1));
@@ -229,10 +169,10 @@ public class ClassUtilsTest extends TestCase {
         assertEquals(IE.class, list.get(3));
         assertEquals(IF.class, list.get(4));
         assertEquals(IA.class, list.get(5));
-
+        
         assertEquals(null, ClassUtils.getAllInterfaces(null));
     }
-
+    
     private static interface IA {
     }
     private static interface IB {
@@ -249,13 +189,13 @@ public class ClassUtilsTest extends TestCase {
     }
     private static class CY extends CX implements IB, IC {
     }
-
+    
     // -------------------------------------------------------------------------
     public void test_convertClassNamesToClasses_List() {
-        List<String> list = new ArrayList<String>();
-        List<Class<?>> result = ClassUtils.convertClassNamesToClasses(list);
+        List list = new ArrayList();
+        List result = ClassUtils.convertClassNamesToClasses(list);
         assertEquals(0, result.size());
-
+        
         list.add("java.lang.String");
         list.add("java.lang.xxx");
         list.add("java.lang.Object");
@@ -265,21 +205,19 @@ public class ClassUtilsTest extends TestCase {
         assertEquals(null, result.get(1));
         assertEquals(Object.class, result.get(2));
 
-        @SuppressWarnings("unchecked") // test what happens when non-generic code adds wrong type of element
-        List<Object> olist = (List<Object>)(List<?>)list;
-        olist.add(new Object());
+        list.add(new Object());
         try {
             ClassUtils.convertClassNamesToClasses(list);
             fail("Should not have been able to convert list");
         } catch (ClassCastException expected) {}
         assertEquals(null, ClassUtils.convertClassNamesToClasses(null));
     }
-
+    
     public void test_convertClassesToClassNames_List() {
-        List<Class<?>> list = new ArrayList<Class<?>>();
-        List<String> result = ClassUtils.convertClassesToClassNames(list);
+        List list = new ArrayList();
+        List result = ClassUtils.convertClassesToClassNames(list);
         assertEquals(0, result.size());
-
+        
         list.add(String.class);
         list.add(null);
         list.add(Object.class);
@@ -289,16 +227,14 @@ public class ClassUtilsTest extends TestCase {
         assertEquals(null, result.get(1));
         assertEquals("java.lang.Object", result.get(2));
 
-        @SuppressWarnings("unchecked") // test what happens when non-generic code adds wrong type of element
-        List<Object> olist = (List<Object>)(List<?>)list;
-        olist.add(new Object());
+        list.add(new Object());
         try {
             ClassUtils.convertClassesToClassNames(list);
             fail("Should not have been able to convert list");
         } catch (ClassCastException expected) {}
         assertEquals(null, ClassUtils.convertClassesToClassNames(null));
     }
-
+    
     // -------------------------------------------------------------------------
     public void test_isInnerClass_Class() {
         assertEquals(true, ClassUtils.isInnerClass(Inner.class));
@@ -309,121 +245,48 @@ public class ClassUtilsTest extends TestCase {
         assertEquals(false, ClassUtils.isInnerClass(String.class));
         assertEquals(false, ClassUtils.isInnerClass(null));
     }
-
+    
     // -------------------------------------------------------------------------
     public void test_isAssignable_ClassArray_ClassArray() throws Exception {
-        Class<?>[] array2 = new Class[] {Object.class, Object.class};
-        Class<?>[] array1 = new Class[] {Object.class};
-        Class<?>[] array1s = new Class[] {String.class};
-        Class<?>[] array0 = new Class[] {};
-        Class<?>[] arrayPrimitives = { Integer.TYPE, Boolean.TYPE };
-        Class<?>[] arrayWrappers = { Integer.class, Boolean.class };
+        Class[] array2 = new Class[] {Object.class, Object.class};
+        Class[] array1 = new Class[] {Object.class};
+        Class[] array1s = new Class[] {String.class};
+        Class[] array0 = new Class[] {};
 
         assertFalse(ClassUtils.isAssignable(array1, array2));
         assertFalse(ClassUtils.isAssignable(null, array2));
         assertTrue(ClassUtils.isAssignable(null, array0));
         assertTrue(ClassUtils.isAssignable(array0, array0));
-//        assertTrue(ClassUtils.isAssignable(array0, null)); 
-        assertTrue(ClassUtils.isAssignable(array0, (Class<?>[]) null)); // explicit cast to avoid warning
+        assertTrue(ClassUtils.isAssignable(array0, null));
         assertTrue(ClassUtils.isAssignable((Class[]) null, (Class[]) null));
-
+        
         assertFalse(ClassUtils.isAssignable(array1, array1s));
         assertTrue(ClassUtils.isAssignable(array1s, array1s));
         assertTrue(ClassUtils.isAssignable(array1s, array1));
-
-        boolean autoboxing = SystemUtils.isJavaVersionAtLeast(JAVA_1_5);
-
-        assertEquals(autoboxing, ClassUtils.isAssignable(arrayPrimitives, arrayWrappers));
-        assertEquals(autoboxing, ClassUtils.isAssignable(arrayWrappers, arrayPrimitives));
-        assertFalse(ClassUtils.isAssignable(arrayPrimitives, array1));
-        assertFalse(ClassUtils.isAssignable(arrayWrappers, array1));
-        assertEquals(autoboxing, ClassUtils.isAssignable(arrayPrimitives, array2));
-        assertTrue(ClassUtils.isAssignable(arrayWrappers, array2));
     }
-
-    public void test_isAssignable_ClassArray_ClassArray_Autoboxing() throws Exception {
-        Class<?>[] array2 = new Class[] {Object.class, Object.class};
-        Class<?>[] array1 = new Class[] {Object.class};
-        Class<?>[] array1s = new Class[] {String.class};
-        Class<?>[] array0 = new Class[] {};
-        Class<?>[] arrayPrimitives = { Integer.TYPE, Boolean.TYPE };
-        Class<?>[] arrayWrappers = { Integer.class, Boolean.class };
-
-        assertFalse(ClassUtils.isAssignable(array1, array2, true));
-        assertFalse(ClassUtils.isAssignable(null, array2, true));
-        assertTrue(ClassUtils.isAssignable(null, array0, true));
-        assertTrue(ClassUtils.isAssignable(array0, array0, true));
-        assertTrue(ClassUtils.isAssignable(array0, null, true));
-        assertTrue(ClassUtils.isAssignable((Class[]) null, (Class[]) null, true));
-
-        assertFalse(ClassUtils.isAssignable(array1, array1s, true));
-        assertTrue(ClassUtils.isAssignable(array1s, array1s, true));
-        assertTrue(ClassUtils.isAssignable(array1s, array1, true));
-
-        assertTrue(ClassUtils.isAssignable(arrayPrimitives, arrayWrappers, true));
-        assertTrue(ClassUtils.isAssignable(arrayWrappers, arrayPrimitives, true));
-        assertFalse(ClassUtils.isAssignable(arrayPrimitives, array1, true));
-        assertFalse(ClassUtils.isAssignable(arrayWrappers, array1, true));
-        assertTrue(ClassUtils.isAssignable(arrayPrimitives, array2, true));
-        assertTrue(ClassUtils.isAssignable(arrayWrappers, array2, true));
-    }
-
-    public void test_isAssignable_ClassArray_ClassArray_NoAutoboxing() throws Exception {
-        Class<?>[] array2 = new Class[] {Object.class, Object.class};
-        Class<?>[] array1 = new Class[] {Object.class};
-        Class<?>[] array1s = new Class[] {String.class};
-        Class<?>[] array0 = new Class[] {};
-        Class<?>[] arrayPrimitives = { Integer.TYPE, Boolean.TYPE };
-        Class<?>[] arrayWrappers = { Integer.class, Boolean.class };
-
-        assertFalse(ClassUtils.isAssignable(array1, array2, false));
-        assertFalse(ClassUtils.isAssignable(null, array2, false));
-        assertTrue(ClassUtils.isAssignable(null, array0, false));
-        assertTrue(ClassUtils.isAssignable(array0, array0, false));
-        assertTrue(ClassUtils.isAssignable(array0, null, false));
-        assertTrue(ClassUtils.isAssignable((Class[]) null, (Class[]) null, false));
-
-        assertFalse(ClassUtils.isAssignable(array1, array1s, false));
-        assertTrue(ClassUtils.isAssignable(array1s, array1s, false));
-        assertTrue(ClassUtils.isAssignable(array1s, array1, false));
-
-        assertFalse(ClassUtils.isAssignable(arrayPrimitives, arrayWrappers, false));
-        assertFalse(ClassUtils.isAssignable(arrayWrappers, arrayPrimitives, false));
-        assertFalse(ClassUtils.isAssignable(arrayPrimitives, array1, false));
-        assertFalse(ClassUtils.isAssignable(arrayWrappers, array1, false));
-        assertTrue(ClassUtils.isAssignable(arrayWrappers, array2, false));
-        assertFalse(ClassUtils.isAssignable(arrayPrimitives, array2, false));
-    }
-
+    
     public void test_isAssignable() throws Exception {
-        assertFalse(ClassUtils.isAssignable((Class<?>) null, null));
+        assertFalse(ClassUtils.isAssignable((Class) null, null));
         assertFalse(ClassUtils.isAssignable(String.class, null));
-
+        
         assertTrue(ClassUtils.isAssignable(null, Object.class));
         assertTrue(ClassUtils.isAssignable(null, Integer.class));
         assertFalse(ClassUtils.isAssignable(null, Integer.TYPE));
         assertTrue(ClassUtils.isAssignable(String.class, Object.class));
         assertTrue(ClassUtils.isAssignable(String.class, String.class));
         assertFalse(ClassUtils.isAssignable(Object.class, String.class));
-
-        boolean autoboxing = SystemUtils.isJavaVersionAtLeast(JAVA_1_5);
-
-        assertEquals(autoboxing, ClassUtils.isAssignable(Integer.TYPE, Integer.class));
-        assertEquals(autoboxing, ClassUtils.isAssignable(Integer.TYPE, Object.class));
-        assertEquals(autoboxing, ClassUtils.isAssignable(Integer.class, Integer.TYPE));
-        assertEquals(autoboxing, ClassUtils.isAssignable(Integer.class, Object.class));
+        assertFalse(ClassUtils.isAssignable(Integer.TYPE, Integer.class));
+        assertFalse(ClassUtils.isAssignable(Integer.class, Integer.TYPE));
         assertTrue(ClassUtils.isAssignable(Integer.TYPE, Integer.TYPE));
         assertTrue(ClassUtils.isAssignable(Integer.class, Integer.class));
-        assertEquals(autoboxing, ClassUtils.isAssignable(Boolean.TYPE, Boolean.class));
-        assertEquals(autoboxing, ClassUtils.isAssignable(Boolean.TYPE, Object.class));
-        assertEquals(autoboxing, ClassUtils.isAssignable(Boolean.class, Boolean.TYPE));
-        assertEquals(autoboxing, ClassUtils.isAssignable(Boolean.class, Object.class));
+        assertFalse(ClassUtils.isAssignable(Boolean.TYPE, Boolean.class));
+        assertFalse(ClassUtils.isAssignable(Boolean.class, Boolean.TYPE));
         assertTrue(ClassUtils.isAssignable(Boolean.TYPE, Boolean.TYPE));
         assertTrue(ClassUtils.isAssignable(Boolean.class, Boolean.class));
     }
-
+    
     public void test_isAssignable_Autoboxing() throws Exception {
-        assertFalse(ClassUtils.isAssignable((Class<?>) null, null, true));
+        assertFalse(ClassUtils.isAssignable((Class) null, null, true));
         assertFalse(ClassUtils.isAssignable(String.class, null, true));
 
         assertTrue(ClassUtils.isAssignable(null, Object.class, true));
@@ -433,39 +296,13 @@ public class ClassUtilsTest extends TestCase {
         assertTrue(ClassUtils.isAssignable(String.class, String.class, true));
         assertFalse(ClassUtils.isAssignable(Object.class, String.class, true));
         assertTrue(ClassUtils.isAssignable(Integer.TYPE, Integer.class, true));
-        assertTrue(ClassUtils.isAssignable(Integer.TYPE, Object.class, true));
         assertTrue(ClassUtils.isAssignable(Integer.class, Integer.TYPE, true));
-        assertTrue(ClassUtils.isAssignable(Integer.class, Object.class, true));
         assertTrue(ClassUtils.isAssignable(Integer.TYPE, Integer.TYPE, true));
         assertTrue(ClassUtils.isAssignable(Integer.class, Integer.class, true));
         assertTrue(ClassUtils.isAssignable(Boolean.TYPE, Boolean.class, true));
         assertTrue(ClassUtils.isAssignable(Boolean.class, Boolean.TYPE, true));
-        assertTrue(ClassUtils.isAssignable(Boolean.class, Object.class, true));
         assertTrue(ClassUtils.isAssignable(Boolean.TYPE, Boolean.TYPE, true));
         assertTrue(ClassUtils.isAssignable(Boolean.class, Boolean.class, true));
-    }
-
-    public void test_isAssignable_NoAutoboxing() throws Exception {
-        assertFalse(ClassUtils.isAssignable((Class<?>) null, null, false));
-        assertFalse(ClassUtils.isAssignable(String.class, null, false));
-
-        assertTrue(ClassUtils.isAssignable(null, Object.class, false));
-        assertTrue(ClassUtils.isAssignable(null, Integer.class, false));
-        assertFalse(ClassUtils.isAssignable(null, Integer.TYPE, false));
-        assertTrue(ClassUtils.isAssignable(String.class, Object.class, false));
-        assertTrue(ClassUtils.isAssignable(String.class, String.class, false));
-        assertFalse(ClassUtils.isAssignable(Object.class, String.class, false));
-        assertFalse(ClassUtils.isAssignable(Integer.TYPE, Integer.class, false));
-        assertFalse(ClassUtils.isAssignable(Integer.TYPE, Object.class, false));
-        assertFalse(ClassUtils.isAssignable(Integer.class, Integer.TYPE, false));
-        assertTrue(ClassUtils.isAssignable(Integer.TYPE, Integer.TYPE, false));
-        assertTrue(ClassUtils.isAssignable(Integer.class, Integer.class, false));
-        assertFalse(ClassUtils.isAssignable(Boolean.TYPE, Boolean.class, false));
-        assertFalse(ClassUtils.isAssignable(Boolean.TYPE, Object.class, false));
-        assertFalse(ClassUtils.isAssignable(Boolean.class, Boolean.TYPE, false));
-        assertTrue(ClassUtils.isAssignable(Boolean.class, Object.class, false));
-        assertTrue(ClassUtils.isAssignable(Boolean.TYPE, Boolean.TYPE, false));
-        assertTrue(ClassUtils.isAssignable(Boolean.class, Boolean.class, false));
     }
 
     public void test_isAssignable_Widening() throws Exception {
@@ -478,7 +315,7 @@ public class ClassUtilsTest extends TestCase {
         assertTrue("byte -> float", ClassUtils.isAssignable(Byte.TYPE, Float.TYPE));
         assertTrue("byte -> double", ClassUtils.isAssignable(Byte.TYPE, Double.TYPE));
         assertFalse("byte -> boolean", ClassUtils.isAssignable(Byte.TYPE, Boolean.TYPE));
-
+        
         // test short conversions
         assertFalse("short -> char", ClassUtils.isAssignable(Short.TYPE, Character.TYPE));
         assertFalse("short -> byte", ClassUtils.isAssignable(Short.TYPE, Byte.TYPE));
@@ -488,7 +325,7 @@ public class ClassUtilsTest extends TestCase {
         assertTrue("short -> float", ClassUtils.isAssignable(Short.TYPE, Float.TYPE));
         assertTrue("short -> double", ClassUtils.isAssignable(Short.TYPE, Double.TYPE));
         assertFalse("short -> boolean", ClassUtils.isAssignable(Short.TYPE, Boolean.TYPE));
-
+        
         // test char conversions
         assertTrue("char -> char", ClassUtils.isAssignable(Character.TYPE, Character.TYPE));
         assertFalse("char -> byte", ClassUtils.isAssignable(Character.TYPE, Byte.TYPE));
@@ -498,7 +335,7 @@ public class ClassUtilsTest extends TestCase {
         assertTrue("char -> float", ClassUtils.isAssignable(Character.TYPE, Float.TYPE));
         assertTrue("char -> double", ClassUtils.isAssignable(Character.TYPE, Double.TYPE));
         assertFalse("char -> boolean", ClassUtils.isAssignable(Character.TYPE, Boolean.TYPE));
-
+        
         // test int conversions
         assertFalse("int -> char", ClassUtils.isAssignable(Integer.TYPE, Character.TYPE));
         assertFalse("int -> byte", ClassUtils.isAssignable(Integer.TYPE, Byte.TYPE));
@@ -508,7 +345,7 @@ public class ClassUtilsTest extends TestCase {
         assertTrue("int -> float", ClassUtils.isAssignable(Integer.TYPE, Float.TYPE));
         assertTrue("int -> double", ClassUtils.isAssignable(Integer.TYPE, Double.TYPE));
         assertFalse("int -> boolean", ClassUtils.isAssignable(Integer.TYPE, Boolean.TYPE));
-
+ 
         // test long conversions
         assertFalse("long -> char", ClassUtils.isAssignable(Long.TYPE, Character.TYPE));
         assertFalse("long -> byte", ClassUtils.isAssignable(Long.TYPE, Byte.TYPE));
@@ -518,7 +355,7 @@ public class ClassUtilsTest extends TestCase {
         assertTrue("long -> float", ClassUtils.isAssignable(Long.TYPE, Float.TYPE));
         assertTrue("long -> double", ClassUtils.isAssignable(Long.TYPE, Double.TYPE));
         assertFalse("long -> boolean", ClassUtils.isAssignable(Long.TYPE, Boolean.TYPE));
-
+ 
         // test float conversions
         assertFalse("float -> char", ClassUtils.isAssignable(Float.TYPE, Character.TYPE));
         assertFalse("float -> byte", ClassUtils.isAssignable(Float.TYPE, Byte.TYPE));
@@ -528,7 +365,7 @@ public class ClassUtilsTest extends TestCase {
         assertTrue("float -> float", ClassUtils.isAssignable(Float.TYPE, Float.TYPE));
         assertTrue("float -> double", ClassUtils.isAssignable(Float.TYPE, Double.TYPE));
         assertFalse("float -> boolean", ClassUtils.isAssignable(Float.TYPE, Boolean.TYPE));
-
+        
         // test double conversions
         assertFalse("double -> char", ClassUtils.isAssignable(Double.TYPE, Character.TYPE));
         assertFalse("double -> byte", ClassUtils.isAssignable(Double.TYPE, Byte.TYPE));
@@ -538,7 +375,7 @@ public class ClassUtilsTest extends TestCase {
         assertFalse("double -> float", ClassUtils.isAssignable(Double.TYPE, Float.TYPE));
         assertTrue("double -> double", ClassUtils.isAssignable(Double.TYPE, Double.TYPE));
         assertFalse("double -> boolean", ClassUtils.isAssignable(Double.TYPE, Boolean.TYPE));
-
+        
         // test boolean conversions
         assertFalse("boolean -> char", ClassUtils.isAssignable(Boolean.TYPE, Character.TYPE));
         assertFalse("boolean -> byte", ClassUtils.isAssignable(Boolean.TYPE, Byte.TYPE));
@@ -549,91 +386,7 @@ public class ClassUtilsTest extends TestCase {
         assertFalse("boolean -> double", ClassUtils.isAssignable(Boolean.TYPE, Double.TYPE));
         assertTrue("boolean -> boolean", ClassUtils.isAssignable(Boolean.TYPE, Boolean.TYPE));
     }
-
-    public void test_isAssignable_DefaultUnboxing_Widening() throws Exception {
-        boolean autoboxing = SystemUtils.isJavaVersionAtLeast(JAVA_1_5);
-
-        // test byte conversions
-        assertFalse("byte -> char", ClassUtils.isAssignable(Byte.class, Character.TYPE));
-        assertEquals("byte -> byte", autoboxing, ClassUtils.isAssignable(Byte.class, Byte.TYPE));
-        assertEquals("byte -> short", autoboxing, ClassUtils.isAssignable(Byte.class, Short.TYPE));
-        assertEquals("byte -> int", autoboxing, ClassUtils.isAssignable(Byte.class, Integer.TYPE));
-        assertEquals("byte -> long", autoboxing, ClassUtils.isAssignable(Byte.class, Long.TYPE));
-        assertEquals("byte -> float", autoboxing, ClassUtils.isAssignable(Byte.class, Float.TYPE));
-        assertEquals("byte -> double", autoboxing, ClassUtils.isAssignable(Byte.class, Double.TYPE));
-        assertFalse("byte -> boolean", ClassUtils.isAssignable(Byte.class, Boolean.TYPE));
-
-        // test short conversions
-        assertFalse("short -> char", ClassUtils.isAssignable(Short.class, Character.TYPE));
-        assertFalse("short -> byte", ClassUtils.isAssignable(Short.class, Byte.TYPE));
-        assertEquals("short -> short", autoboxing, ClassUtils.isAssignable(Short.class, Short.TYPE));
-        assertEquals("short -> int", autoboxing, ClassUtils.isAssignable(Short.class, Integer.TYPE));
-        assertEquals("short -> long", autoboxing, ClassUtils.isAssignable(Short.class, Long.TYPE));
-        assertEquals("short -> float", autoboxing, ClassUtils.isAssignable(Short.class, Float.TYPE));
-        assertEquals("short -> double", autoboxing, ClassUtils.isAssignable(Short.class, Double.TYPE));
-        assertFalse("short -> boolean", ClassUtils.isAssignable(Short.class, Boolean.TYPE));
-
-        // test char conversions
-        assertEquals("char -> char", autoboxing, ClassUtils.isAssignable(Character.class, Character.TYPE));
-        assertFalse("char -> byte", ClassUtils.isAssignable(Character.class, Byte.TYPE));
-        assertFalse("char -> short", ClassUtils.isAssignable(Character.class, Short.TYPE));
-        assertEquals("char -> int", autoboxing, ClassUtils.isAssignable(Character.class, Integer.TYPE));
-        assertEquals("char -> long", autoboxing, ClassUtils.isAssignable(Character.class, Long.TYPE));
-        assertEquals("char -> float", autoboxing, ClassUtils.isAssignable(Character.class, Float.TYPE));
-        assertEquals("char -> double", autoboxing, ClassUtils.isAssignable(Character.class, Double.TYPE));
-        assertFalse("char -> boolean", ClassUtils.isAssignable(Character.class, Boolean.TYPE));
-
-        // test int conversions
-        assertFalse("int -> char", ClassUtils.isAssignable(Integer.class, Character.TYPE));
-        assertFalse("int -> byte", ClassUtils.isAssignable(Integer.class, Byte.TYPE));
-        assertFalse("int -> short", ClassUtils.isAssignable(Integer.class, Short.TYPE));
-        assertEquals("int -> int", autoboxing, ClassUtils.isAssignable(Integer.class, Integer.TYPE));
-        assertEquals("int -> long", autoboxing, ClassUtils.isAssignable(Integer.class, Long.TYPE));
-        assertEquals("int -> float", autoboxing, ClassUtils.isAssignable(Integer.class, Float.TYPE));
-        assertEquals("int -> double", autoboxing, ClassUtils.isAssignable(Integer.class, Double.TYPE));
-        assertFalse("int -> boolean", ClassUtils.isAssignable(Integer.class, Boolean.TYPE));
-
-        // test long conversions
-        assertFalse("long -> char", ClassUtils.isAssignable(Long.class, Character.TYPE));
-        assertFalse("long -> byte", ClassUtils.isAssignable(Long.class, Byte.TYPE));
-        assertFalse("long -> short", ClassUtils.isAssignable(Long.class, Short.TYPE));
-        assertFalse("long -> int", ClassUtils.isAssignable(Long.class, Integer.TYPE));
-        assertEquals("long -> long", autoboxing, ClassUtils.isAssignable(Long.class, Long.TYPE));
-        assertEquals("long -> float", autoboxing, ClassUtils.isAssignable(Long.class, Float.TYPE));
-        assertEquals("long -> double", autoboxing, ClassUtils.isAssignable(Long.class, Double.TYPE));
-        assertFalse("long -> boolean", ClassUtils.isAssignable(Long.class, Boolean.TYPE));
-
-        // test float conversions
-        assertFalse("float -> char", ClassUtils.isAssignable(Float.class, Character.TYPE));
-        assertFalse("float -> byte", ClassUtils.isAssignable(Float.class, Byte.TYPE));
-        assertFalse("float -> short", ClassUtils.isAssignable(Float.class, Short.TYPE));
-        assertFalse("float -> int", ClassUtils.isAssignable(Float.class, Integer.TYPE));
-        assertFalse("float -> long", ClassUtils.isAssignable(Float.class, Long.TYPE));
-        assertEquals("float -> float", autoboxing, ClassUtils.isAssignable(Float.class, Float.TYPE));
-        assertEquals("float -> double", autoboxing, ClassUtils.isAssignable(Float.class, Double.TYPE));
-        assertFalse("float -> boolean", ClassUtils.isAssignable(Float.class, Boolean.TYPE));
-
-        // test double conversions
-        assertFalse("double -> char", ClassUtils.isAssignable(Double.class, Character.TYPE));
-        assertFalse("double -> byte", ClassUtils.isAssignable(Double.class, Byte.TYPE));
-        assertFalse("double -> short", ClassUtils.isAssignable(Double.class, Short.TYPE));
-        assertFalse("double -> int", ClassUtils.isAssignable(Double.class, Integer.TYPE));
-        assertFalse("double -> long", ClassUtils.isAssignable(Double.class, Long.TYPE));
-        assertFalse("double -> float", ClassUtils.isAssignable(Double.class, Float.TYPE));
-        assertEquals("double -> double", autoboxing, ClassUtils.isAssignable(Double.class, Double.TYPE));
-        assertFalse("double -> boolean", ClassUtils.isAssignable(Double.class, Boolean.TYPE));
-
-        // test boolean conversions
-        assertFalse("boolean -> char", ClassUtils.isAssignable(Boolean.class, Character.TYPE));
-        assertFalse("boolean -> byte", ClassUtils.isAssignable(Boolean.class, Byte.TYPE));
-        assertFalse("boolean -> short", ClassUtils.isAssignable(Boolean.class, Short.TYPE));
-        assertFalse("boolean -> int", ClassUtils.isAssignable(Boolean.class, Integer.TYPE));
-        assertFalse("boolean -> long", ClassUtils.isAssignable(Boolean.class, Long.TYPE));
-        assertFalse("boolean -> float", ClassUtils.isAssignable(Boolean.class, Float.TYPE));
-        assertFalse("boolean -> double", ClassUtils.isAssignable(Boolean.class, Double.TYPE));
-        assertEquals("boolean -> boolean", autoboxing, ClassUtils.isAssignable(Boolean.class, Boolean.TYPE));
-    }
-
+    
     public void test_isAssignable_Unboxing_Widening() throws Exception {
         // test byte conversions
         assertFalse("byte -> char", ClassUtils.isAssignable(Byte.class, Character.TYPE, true));
@@ -644,7 +397,7 @@ public class ClassUtilsTest extends TestCase {
         assertTrue("byte -> float", ClassUtils.isAssignable(Byte.class, Float.TYPE, true));
         assertTrue("byte -> double", ClassUtils.isAssignable(Byte.class, Double.TYPE, true));
         assertFalse("byte -> boolean", ClassUtils.isAssignable(Byte.class, Boolean.TYPE, true));
-
+        
         // test short conversions
         assertFalse("short -> char", ClassUtils.isAssignable(Short.class, Character.TYPE, true));
         assertFalse("short -> byte", ClassUtils.isAssignable(Short.class, Byte.TYPE, true));
@@ -654,7 +407,7 @@ public class ClassUtilsTest extends TestCase {
         assertTrue("short -> float", ClassUtils.isAssignable(Short.class, Float.TYPE, true));
         assertTrue("short -> double", ClassUtils.isAssignable(Short.class, Double.TYPE, true));
         assertFalse("short -> boolean", ClassUtils.isAssignable(Short.class, Boolean.TYPE, true));
-
+        
         // test char conversions
         assertTrue("char -> char", ClassUtils.isAssignable(Character.class, Character.TYPE, true));
         assertFalse("char -> byte", ClassUtils.isAssignable(Character.class, Byte.TYPE, true));
@@ -664,7 +417,7 @@ public class ClassUtilsTest extends TestCase {
         assertTrue("char -> float", ClassUtils.isAssignable(Character.class, Float.TYPE, true));
         assertTrue("char -> double", ClassUtils.isAssignable(Character.class, Double.TYPE, true));
         assertFalse("char -> boolean", ClassUtils.isAssignable(Character.class, Boolean.TYPE, true));
-
+        
         // test int conversions
         assertFalse("int -> char", ClassUtils.isAssignable(Integer.class, Character.TYPE, true));
         assertFalse("int -> byte", ClassUtils.isAssignable(Integer.class, Byte.TYPE, true));
@@ -674,7 +427,7 @@ public class ClassUtilsTest extends TestCase {
         assertTrue("int -> float", ClassUtils.isAssignable(Integer.class, Float.TYPE, true));
         assertTrue("int -> double", ClassUtils.isAssignable(Integer.class, Double.TYPE, true));
         assertFalse("int -> boolean", ClassUtils.isAssignable(Integer.class, Boolean.TYPE, true));
-
+        
         // test long conversions
         assertFalse("long -> char", ClassUtils.isAssignable(Long.class, Character.TYPE, true));
         assertFalse("long -> byte", ClassUtils.isAssignable(Long.class, Byte.TYPE, true));
@@ -684,7 +437,7 @@ public class ClassUtilsTest extends TestCase {
         assertTrue("long -> float", ClassUtils.isAssignable(Long.class, Float.TYPE, true));
         assertTrue("long -> double", ClassUtils.isAssignable(Long.class, Double.TYPE, true));
         assertFalse("long -> boolean", ClassUtils.isAssignable(Long.class, Boolean.TYPE, true));
-
+        
         // test float conversions
         assertFalse("float -> char", ClassUtils.isAssignable(Float.class, Character.TYPE, true));
         assertFalse("float -> byte", ClassUtils.isAssignable(Float.class, Byte.TYPE, true));
@@ -694,7 +447,7 @@ public class ClassUtilsTest extends TestCase {
         assertTrue("float -> float", ClassUtils.isAssignable(Float.class, Float.TYPE, true));
         assertTrue("float -> double", ClassUtils.isAssignable(Float.class, Double.TYPE, true));
         assertFalse("float -> boolean", ClassUtils.isAssignable(Float.class, Boolean.TYPE, true));
-
+        
         // test double conversions
         assertFalse("double -> char", ClassUtils.isAssignable(Double.class, Character.TYPE, true));
         assertFalse("double -> byte", ClassUtils.isAssignable(Double.class, Byte.TYPE, true));
@@ -704,7 +457,7 @@ public class ClassUtilsTest extends TestCase {
         assertFalse("double -> float", ClassUtils.isAssignable(Double.class, Float.TYPE, true));
         assertTrue("double -> double", ClassUtils.isAssignable(Double.class, Double.TYPE, true));
         assertFalse("double -> boolean", ClassUtils.isAssignable(Double.class, Boolean.TYPE, true));
-
+        
         // test boolean conversions
         assertFalse("boolean -> char", ClassUtils.isAssignable(Boolean.class, Character.TYPE, true));
         assertFalse("boolean -> byte", ClassUtils.isAssignable(Boolean.class, Byte.TYPE, true));
@@ -715,12 +468,12 @@ public class ClassUtilsTest extends TestCase {
         assertFalse("boolean -> double", ClassUtils.isAssignable(Boolean.class, Double.TYPE, true));
         assertTrue("boolean -> boolean", ClassUtils.isAssignable(Boolean.class, Boolean.TYPE, true));
     }
-
+    
     public void testPrimitiveToWrapper() {
-
+       
         // test primitive classes
-        assertEquals("boolean -> Boolean.class",
-            Boolean.class, ClassUtils.primitiveToWrapper(Boolean.TYPE));
+        assertEquals("boolean -> Boolean.class", 
+            Boolean.class, ClassUtils.primitiveToWrapper(Boolean.TYPE));   
         assertEquals("byte -> Byte.class",
             Byte.class, ClassUtils.primitiveToWrapper(Byte.TYPE));
         assertEquals("char -> Character.class",
@@ -735,52 +488,47 @@ public class ClassUtilsTest extends TestCase {
             Double.class, ClassUtils.primitiveToWrapper(Double.TYPE));
         assertEquals("float -> Float.class",
             Float.class, ClassUtils.primitiveToWrapper(Float.TYPE));
-
+        
         // test a few other classes
         assertEquals("String.class -> String.class",
             String.class, ClassUtils.primitiveToWrapper(String.class));
         assertEquals("ClassUtils.class -> ClassUtils.class",
-            org.apache.commons.lang3.ClassUtils.class,
+            org.apache.commons.lang3.ClassUtils.class, 
             ClassUtils.primitiveToWrapper(org.apache.commons.lang3.ClassUtils.class));
         assertEquals("Void.TYPE -> Void.TYPE",
             Void.TYPE, ClassUtils.primitiveToWrapper(Void.TYPE));
-
-        // test null
+            
+        // test null     
         assertNull("null -> null",
             ClassUtils.primitiveToWrapper(null));
     }
 
     public void testPrimitivesToWrappers() {
         // test null
-//        assertNull("null -> null", ClassUtils.primitivesToWrappers(null)); // generates warning
-        assertNull("null -> null", ClassUtils.primitivesToWrappers((Class<?>[]) null)); // equivalent cast to avoid warning
-        // Other possible casts for null
-        assertTrue("empty -> empty", Arrays.equals(ArrayUtils.EMPTY_CLASS_ARRAY, ClassUtils.primitivesToWrappers()));
-        Class<?>[] castNull = ClassUtils.primitivesToWrappers((Class<?>)null); // == new Class<?>[]{null}
-        assertTrue("(Class<?>)null -> [null]", Arrays.equals(new Class<?>[]{null}, castNull));
-        // test empty array is returned unchanged
-        // TODO this is not documented
+        assertNull("null -> null",
+            ClassUtils.primitivesToWrappers(null));
+        // test empty array
         assertEquals("empty -> empty",
                 ArrayUtils.EMPTY_CLASS_ARRAY, ClassUtils.primitivesToWrappers(ArrayUtils.EMPTY_CLASS_ARRAY));
 
         // test an array of various classes
-        final Class<?>[] primitives = new Class[] {
-                Boolean.TYPE, Byte.TYPE, Character.TYPE, Short.TYPE,
+        final Class[] primitives = new Class[] {
+                Boolean.TYPE, Byte.TYPE, Character.TYPE, Short.TYPE, 
                 Integer.TYPE, Long.TYPE, Double.TYPE, Float.TYPE,
                 String.class, ClassUtils.class
         };
-        Class<?>[] wrappers= ClassUtils.primitivesToWrappers(primitives);
-
+        Class[] wrappers= ClassUtils.primitivesToWrappers(primitives);
+        
         for (int i=0; i < primitives.length; i++) {
             // test each returned wrapper
-            Class<?> primitive = primitives[i];
-            Class<?> expectedWrapper = ClassUtils.primitiveToWrapper(primitive);
-
+            Class primitive = primitives[i];
+            Class expectedWrapper = ClassUtils.primitiveToWrapper(primitive);
+            
             assertEquals(primitive + " -> " + expectedWrapper, expectedWrapper, wrappers[i]);
         }
 
         // test an array of no primitive classes
-        final Class<?>[] noPrimitives = new Class[] {
+        final Class[] noPrimitives = new Class[] {
                 String.class, ClassUtils.class, Void.TYPE
         };
         // This used to return the exact same array, but no longer does.
@@ -789,14 +537,14 @@ public class ClassUtilsTest extends TestCase {
 
     public void testWrapperToPrimitive() {
         // an array with classes to convert
-        final Class<?>[] primitives = {
+        final Class[] primitives = {
                 Boolean.TYPE, Byte.TYPE, Character.TYPE, Short.TYPE,
                 Integer.TYPE, Long.TYPE, Float.TYPE, Double.TYPE
         };
-        for (Class<?> primitive : primitives) {
-            Class<?> wrapperCls = ClassUtils.primitiveToWrapper(primitive);
+        for (int i = 0; i < primitives.length; i++) {
+            Class wrapperCls = ClassUtils.primitiveToWrapper(primitives[i]);
             assertFalse("Still primitive", wrapperCls.isPrimitive());
-            assertEquals(wrapperCls + " -> " + primitive, primitive,
+            assertEquals(wrapperCls + " -> " + primitives[i], primitives[i],
                     ClassUtils.wrapperToPrimitive(wrapperCls));
         }
     }
@@ -811,33 +559,28 @@ public class ClassUtilsTest extends TestCase {
 
     public void testWrappersToPrimitives() {
         // an array with classes to test
-        final Class<?>[] classes = {
+        final Class[] classes = {
                 Boolean.class, Byte.class, Character.class, Short.class,
                 Integer.class, Long.class, Float.class, Double.class,
                 String.class, ClassUtils.class, null
         };
 
-        Class<?>[] primitives = ClassUtils.wrappersToPrimitives(classes);
+        Class[] primitives = ClassUtils.wrappersToPrimitives(classes);
         // now test the result
         assertEquals("Wrong length of result array", classes.length, primitives.length);
         for (int i = 0; i < classes.length; i++) {
-            Class<?> expectedPrimitive = ClassUtils.wrapperToPrimitive(classes[i]);
+            Class expectedPrimitive = ClassUtils.wrapperToPrimitive(classes[i]);
             assertEquals(classes[i] + " -> " + expectedPrimitive, expectedPrimitive,
                     primitives[i]);
         }
     }
 
     public void testWrappersToPrimitivesNull() {
-//        assertNull("Wrong result for null input", ClassUtils.wrappersToPrimitives(null)); // generates warning
-        assertNull("Wrong result for null input", ClassUtils.wrappersToPrimitives((Class<?>[]) null)); // equivalent cast
-        // Other possible casts for null
-        assertTrue("empty -> empty", Arrays.equals(ArrayUtils.EMPTY_CLASS_ARRAY, ClassUtils.wrappersToPrimitives()));
-        Class<?>[] castNull = ClassUtils.wrappersToPrimitives((Class<?>)null); // == new Class<?>[]{null}
-        assertTrue("(Class<?>)null -> [null]", Arrays.equals(new Class<?>[]{null}, castNull));
-}
+        assertNull("Wrong result for null input", ClassUtils.wrappersToPrimitives(null));
+    }
 
     public void testWrappersToPrimitivesEmpty() {
-        Class<?>[] empty = new Class[0];
+        Class[] empty = new Class[0];
         assertEquals("Wrong result for empty input", empty, ClassUtils.wrappersToPrimitives(empty));
     }
 
@@ -848,7 +591,7 @@ public class ClassUtilsTest extends TestCase {
     }
 
     public void testGetClassInvalidArguments() throws Exception {
-        assertGetClassThrowsNullPointerException( null );
+        assertGetClassThrowsIllegalArgument( null );
         assertGetClassThrowsClassNotFound( "[][][]" );
         assertGetClassThrowsClassNotFound( "[[]" );
         assertGetClassThrowsClassNotFound( "[" );
@@ -934,11 +677,11 @@ public class ClassUtilsTest extends TestCase {
         assertEquals( boolean.class, ClassUtils.getClass( "boolean" ) );
     }
 
-    private void assertGetClassReturnsClass( Class<?> c ) throws Exception {
+    private void assertGetClassReturnsClass( Class c ) throws Exception {
         assertEquals( c, ClassUtils.getClass( c.getName() ) );
     }
 
-    private void assertGetClassThrowsException( String className, Class<?> exceptionType ) throws Exception {
+    private void assertGetClassThrowsException( String className, Class exceptionType ) throws Exception {
         try {
             ClassUtils.getClass( className );
             fail( "ClassUtils.getClass() should fail with an exception of type " + exceptionType.getName() + " when given class name \"" + className + "\"." );
@@ -948,8 +691,8 @@ public class ClassUtilsTest extends TestCase {
         }
     }
 
-    private void assertGetClassThrowsNullPointerException( String className ) throws Exception {
-        assertGetClassThrowsException( className, NullPointerException.class );
+    private void assertGetClassThrowsIllegalArgument( String className ) throws Exception {
+        assertGetClassThrowsException( className, IllegalArgumentException.class );
     }
 
     private void assertGetClassThrowsClassNotFound( String className ) throws Exception {
@@ -960,7 +703,7 @@ public class ClassUtilsTest extends TestCase {
     // We may have to delete this if a JDK fixes the bug.
     public void testShowJavaBug() throws Exception {
         // Tests with Collections$UnmodifiableSet
-        Set<?> set = Collections.unmodifiableSet(new HashSet<Object>());
+        Set set = Collections.unmodifiableSet(new HashSet());
         Method isEmptyMethod = set.getClass().getMethod("isEmpty",  new Class[0]);
         try {
             isEmptyMethod.invoke(set, new Object[0]);
@@ -972,37 +715,31 @@ public class ClassUtilsTest extends TestCase {
 
     public void testGetPublicMethod() throws Exception {
         // Tests with Collections$UnmodifiableSet
-        Set<?> set = Collections.unmodifiableSet(new HashSet<Object>());
+        Set set = Collections.unmodifiableSet(new HashSet());
         Method isEmptyMethod = ClassUtils.getPublicMethod(set.getClass(), "isEmpty",  new Class[0]);
             assertTrue(Modifier.isPublic(isEmptyMethod.getDeclaringClass().getModifiers()));
-
+ 
         try {
             isEmptyMethod.invoke(set, new Object[0]);
         } catch(java.lang.IllegalAccessException iae) {
             fail("Should not have thrown IllegalAccessException");
         }
-
+               
         // Tests with a public Class
         Method toStringMethod = ClassUtils.getPublicMethod(Object.class, "toString",  new Class[0]);
             assertEquals(Object.class.getMethod("toString", new Class[0]), toStringMethod);
     }
-
+ 
     public void testToClass_object() {
-//        assertNull(ClassUtils.toClass(null)); // generates warning
-        assertNull(ClassUtils.toClass((Object[]) null)); // equivalent explicit cast
-        
-        // Additional varargs tests
-        assertTrue("empty -> empty", Arrays.equals(ArrayUtils.EMPTY_CLASS_ARRAY, ClassUtils.toClass()));
-        Class<?>[] castNull = ClassUtils.toClass((Object) null); // == new Object[]{null}
-        assertTrue("(Object)null -> [null]", Arrays.equals(new Object[]{null}, castNull));
+        assertNull(ClassUtils.toClass(null));
 
         assertSame(ArrayUtils.EMPTY_CLASS_ARRAY, ClassUtils.toClass(ArrayUtils.EMPTY_OBJECT_ARRAY));
 
         assertTrue(Arrays.equals(new Class[] { String.class, Integer.class, Double.class },
-                ClassUtils.toClass(new Object[] { "Test", Integer.valueOf(1), Double.valueOf(99d) })));
+                ClassUtils.toClass(new Object[] { "Test", new Integer(1), new Double(99d) })));
 
         assertTrue(Arrays.equals(new Class[] { String.class, null, Double.class },
-                ClassUtils.toClass(new Object[] { "Test", null, Double.valueOf(99d) })));
+                ClassUtils.toClass(new Object[] { "Test", null, new Double(99d) })));
     }
 
     public void test_getShortCanonicalName_Object() {
@@ -1012,12 +749,6 @@ public class ClassUtilsTest extends TestCase {
         assertEquals("ClassUtils[][]", ClassUtils.getShortCanonicalName(new ClassUtils[0][0], "<null>"));
         assertEquals("int[]", ClassUtils.getShortCanonicalName(new int[0], "<null>"));
         assertEquals("int[][]", ClassUtils.getShortCanonicalName(new int[0][0], "<null>"));
-
-        // Inner types
-        class Named extends Object {};
-        assertEquals("ClassUtilsTest.6", ClassUtils.getShortCanonicalName(new Object(){}, "<null>"));
-        assertEquals("ClassUtilsTest.5Named", ClassUtils.getShortCanonicalName(new Named(), "<null>"));
-        assertEquals("ClassUtilsTest.Inner", ClassUtils.getShortCanonicalName(new Inner(), "<null>"));
     }
 
     public void test_getShortCanonicalName_Class() {
@@ -1026,12 +757,6 @@ public class ClassUtilsTest extends TestCase {
         assertEquals("ClassUtils[][]", ClassUtils.getShortCanonicalName(ClassUtils[][].class));
         assertEquals("int[]", ClassUtils.getShortCanonicalName(int[].class));
         assertEquals("int[][]", ClassUtils.getShortCanonicalName(int[][].class));
-        
-        // Inner types
-        class Named extends Object {};
-        assertEquals("ClassUtilsTest.7", ClassUtils.getShortCanonicalName(new Object(){}.getClass()));
-        assertEquals("ClassUtilsTest.6Named", ClassUtils.getShortCanonicalName(Named.class));
-        assertEquals("ClassUtilsTest.Inner", ClassUtils.getShortCanonicalName(Inner.class));
     }
 
     public void test_getShortCanonicalName_String() {
@@ -1044,11 +769,6 @@ public class ClassUtilsTest extends TestCase {
         assertEquals("int[][]", ClassUtils.getShortCanonicalName("[[I"));
         assertEquals("int[]", ClassUtils.getShortCanonicalName("int[]"));
         assertEquals("int[][]", ClassUtils.getShortCanonicalName("int[][]"));
-        
-        // Inner types
-        assertEquals("ClassUtilsTest.6", ClassUtils.getShortCanonicalName("org.apache.commons.lang3.ClassUtilsTest$6"));
-        assertEquals("ClassUtilsTest.5Named", ClassUtils.getShortCanonicalName("org.apache.commons.lang3.ClassUtilsTest$5Named"));
-        assertEquals("ClassUtilsTest.Inner", ClassUtils.getShortCanonicalName("org.apache.commons.lang3.ClassUtilsTest$Inner"));
     }
 
     public void test_getPackageCanonicalName_Object() {
@@ -1058,12 +778,6 @@ public class ClassUtilsTest extends TestCase {
         assertEquals("org.apache.commons.lang3", ClassUtils.getPackageCanonicalName(new ClassUtils[0][0], "<null>"));
         assertEquals("", ClassUtils.getPackageCanonicalName(new int[0], "<null>"));
         assertEquals("", ClassUtils.getPackageCanonicalName(new int[0][0], "<null>"));
-        
-        // Inner types
-        class Named extends Object {};
-        assertEquals("org.apache.commons.lang3", ClassUtils.getPackageCanonicalName(new Object(){}, "<null>"));
-        assertEquals("org.apache.commons.lang3", ClassUtils.getPackageCanonicalName(new Named(), "<null>"));
-        assertEquals("org.apache.commons.lang3", ClassUtils.getPackageCanonicalName(new Inner(), "<null>"));
     }
 
     public void test_getPackageCanonicalName_Class() {
@@ -1072,34 +786,23 @@ public class ClassUtilsTest extends TestCase {
         assertEquals("org.apache.commons.lang3", ClassUtils.getPackageCanonicalName(ClassUtils[][].class));
         assertEquals("", ClassUtils.getPackageCanonicalName(int[].class));
         assertEquals("", ClassUtils.getPackageCanonicalName(int[][].class));
-        
-        // Inner types
-        class Named extends Object {};
-        assertEquals("org.apache.commons.lang3", ClassUtils.getPackageCanonicalName(new Object(){}.getClass()));
-        assertEquals("org.apache.commons.lang3", ClassUtils.getPackageCanonicalName(Named.class));
-        assertEquals("org.apache.commons.lang3", ClassUtils.getPackageCanonicalName(Inner.class));
     }
 
     public void test_getPackageCanonicalName_String() {
-        assertEquals("org.apache.commons.lang3",
+        assertEquals("org.apache.commons.lang3", 
             ClassUtils.getPackageCanonicalName("org.apache.commons.lang3.ClassUtils"));
-        assertEquals("org.apache.commons.lang3",
+        assertEquals("org.apache.commons.lang3", 
             ClassUtils.getPackageCanonicalName("[Lorg.apache.commons.lang3.ClassUtils;"));
-        assertEquals("org.apache.commons.lang3",
+        assertEquals("org.apache.commons.lang3", 
             ClassUtils.getPackageCanonicalName("[[Lorg.apache.commons.lang3.ClassUtils;"));
-        assertEquals("org.apache.commons.lang3",
+        assertEquals("org.apache.commons.lang3", 
             ClassUtils.getPackageCanonicalName("org.apache.commons.lang3.ClassUtils[]"));
-        assertEquals("org.apache.commons.lang3",
+        assertEquals("org.apache.commons.lang3", 
             ClassUtils.getPackageCanonicalName("org.apache.commons.lang3.ClassUtils[][]"));
         assertEquals("", ClassUtils.getPackageCanonicalName("[I"));
         assertEquals("", ClassUtils.getPackageCanonicalName("[[I"));
         assertEquals("", ClassUtils.getPackageCanonicalName("int[]"));
         assertEquals("", ClassUtils.getPackageCanonicalName("int[][]"));
-        
-        // Inner types
-        assertEquals("org.apache.commons.lang3", ClassUtils.getPackageCanonicalName("org.apache.commons.lang3.ClassUtilsTest$6"));
-        assertEquals("org.apache.commons.lang3", ClassUtils.getPackageCanonicalName("org.apache.commons.lang3.ClassUtilsTest$5Named"));
-        assertEquals("org.apache.commons.lang3", ClassUtils.getPackageCanonicalName("org.apache.commons.lang3.ClassUtilsTest$Inner"));
     }
 
 }
