@@ -21,7 +21,7 @@ import junit.framework.TestCase;
 /**
  * JUnit tests.
  * 
- * @version $Id: MutableByteTest.java 892118 2009-12-18 03:39:13Z sebb $
+ * @version $Id: MutableByteTest.java 1067685 2011-02-06 15:38:57Z niallp $
  * @see MutableByte
  */
 public class MutableByteTest extends TestCase {
@@ -36,7 +36,7 @@ public class MutableByteTest extends TestCase {
         
         assertEquals((byte) 1, new MutableByte((byte) 1).byteValue());
         
-        assertEquals((byte) 2, new MutableByte(Byte.valueOf((byte) 2)).byteValue());
+        assertEquals((byte) 2, new MutableByte(new Byte((byte) 2)).byteValue());
         assertEquals((byte) 3, new MutableByte(new MutableByte((byte) 3)).byteValue());
 
         assertEquals((byte) 2, new MutableByte("2").byteValue());
@@ -50,23 +50,27 @@ public class MutableByteTest extends TestCase {
     public void testGetSet() {
         final MutableByte mutNum = new MutableByte((byte) 0);
         assertEquals((byte) 0, new MutableByte().byteValue());
-        assertEquals(Byte.valueOf((byte) 0), new MutableByte().getValue());
+        assertEquals(new Byte((byte) 0), new MutableByte().getValue());
         
         mutNum.setValue((byte) 1);
         assertEquals((byte) 1, mutNum.byteValue());
-        assertEquals(Byte.valueOf((byte) 1), mutNum.getValue());
+        assertEquals(new Byte((byte) 1), mutNum.getValue());
         
-        mutNum.setValue(Byte.valueOf((byte) 2));
+        mutNum.setValue(new Byte((byte) 2));
         assertEquals((byte) 2, mutNum.byteValue());
-        assertEquals(Byte.valueOf((byte) 2), mutNum.getValue());
+        assertEquals(new Byte((byte) 2), mutNum.getValue());
         
         mutNum.setValue(new MutableByte((byte) 3));
         assertEquals((byte) 3, mutNum.byteValue());
-        assertEquals(Byte.valueOf((byte) 3), mutNum.getValue());
+        assertEquals(new Byte((byte) 3), mutNum.getValue());
         try {
             mutNum.setValue(null);
             fail();
         } catch (NullPointerException ex) {}
+        try {
+            mutNum.setValue("0");
+            fail();
+        } catch (ClassCastException ex) {}
     }
 
     public void testEquals() {
@@ -82,7 +86,7 @@ public class MutableByteTest extends TestCase {
         assertEquals(false, mutNumB.equals(mutNumC));
         assertEquals(true, mutNumC.equals(mutNumC));
         assertEquals(false, mutNumA.equals(null));
-        assertEquals(false, mutNumA.equals(Byte.valueOf((byte) 0)));
+        assertEquals(false, mutNumA.equals(new Byte((byte) 0)));
         assertEquals(false, mutNumA.equals("0"));
     }
 
@@ -94,7 +98,7 @@ public class MutableByteTest extends TestCase {
         assertEquals(true, mutNumA.hashCode() == mutNumA.hashCode());
         assertEquals(true, mutNumA.hashCode() == mutNumB.hashCode());
         assertEquals(false, mutNumA.hashCode() == mutNumC.hashCode());
-        assertEquals(true, mutNumA.hashCode() == Byte.valueOf((byte) 0).hashCode());
+        assertEquals(true, mutNumA.hashCode() == new Byte((byte) 0).hashCode());
     }
 
     public void testCompareTo() {
@@ -107,6 +111,14 @@ public class MutableByteTest extends TestCase {
             mutNum.compareTo(null);
             fail();
         } catch (NullPointerException ex) {}
+        try {
+            mutNum.compareTo(new Byte((byte) 0));
+            fail();
+        } catch (ClassCastException ex) {}
+        try {
+            mutNum.compareTo("0");
+            fail();
+        } catch (ClassCastException ex) {}
     }
 
     public void testPrimitiveValues() {
@@ -121,8 +133,8 @@ public class MutableByteTest extends TestCase {
     }
 
     public void testToByte() {
-        assertEquals(Byte.valueOf((byte) 0), new MutableByte((byte) 0).toByte());
-        assertEquals(Byte.valueOf((byte) 123), new MutableByte((byte) 123).toByte());
+        assertEquals(new Byte((byte) 0), new MutableByte((byte) 0).toByte());
+        assertEquals(new Byte((byte) 123), new MutableByte((byte) 123).toByte());
     }
 
     public void testIncrement() {
